[package]
name = "morpho-sessions"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
actix-web = { version = "4", features = ["rustls"] }
actix-web-lab = "0.17"
actix-files = "0.6"
env_logger = "0.9"
log = "0.4"
rustls = "0.20.2"
rustls-pemfile = "1"
uuid = { version = "0.4", features = ["serde", "v4"] }
cookie = "0.16"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
serde = { version = "1.0.145", features = ["derive"] }
